Avoid use of references across a co_await

It's common practice to pass a reference to a string into a method, even
though copying strings in Qt is extremely fast.

This is only fine for the first invocation, after a co_await it ends up
being a dangling reference. This would crash on the second iteration of
the loop.

BUG: 519739